--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
+NEXT_PUBLIC_CLERK_FRONTEND_API=immense-foal-33.clerk.accounts.dev
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW1tZW5zZS1mb2FsLTMzLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_SdKSK00xHLsARhcpUlEb39j4FqZP593VbbTy3VeegF
 
