--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "inngest": "^3.35.1",
     "mongoose": "^8.14.1",
     "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
