--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ CLERK_SECRET_KEY=sk_test_SdKSK00xHLsARhcpUlEb39j4FqZP593VbbTy3VeegF
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
-MONGODB_URI=mongodb+srv://ritoukir:Rifat811@@cluster0.qzt9zh4.mongodb.net
+MONGODB_URI=mongodb+srv://ritoukir:Rifat811@cluster0.qzt9zh4.mongodb.net/mydatabase?retryWrites=true&w=majority
 
 INNGEST_SIGNING_KEY=signkey-prod-...
 INNGEST_EVENT_KEY=MP4zf8y...
