--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
+# Currency symbol
 NEXT_PUBLIC_CURRENCY=$
 
+# Clerk configuration
 NEXT_PUBLIC_CLERK_FRONTEND_API=immense-foal-33.clerk.accounts.dev
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW1tZW5zZS1mb2FsLTMzLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_SdKSK00xHLsARhcpUlEb39j4FqZP593VbbTy3VeegF
@@ -7,11 +9,14 @@ CLERK_SECRET_KEY=sk_test_SdKSK00xHLsARhcpUlEb39j4FqZP593VbbTy3VeegF
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
+# MongoDB connection
 MONGODB_URI=mongodb+srv://ritoukir:Rifat811@cluster0.qzt9zh4.mongodb.net/mydatabase?retryWrites=true&w=majority
 
+# Inngest keys
 INNGEST_SIGNING_KEY=signkey-prod-...
 INNGEST_EVENT_KEY=MP4zf8y...
 
+# Cloudinary (optional, fill if you use Cloudinary)
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
